# org-memory-mcp

./: .gitignore  main.py  pyproject.toml
docs/design-logs/: 001-org-memory-mcp.md  002-mcp-native-resource-hints.md  003-global-memory-search.md  004-project-activation-schema-hint.md  005-strict-evidence-feedback.md
org_mem/: __init__.py  config.py  embeddings.py  hints.py  index.py  locking.py  logging.py  models.py  org_file.py  registry.py  server.py  service.py  storage.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_index.py  test_locking.py  test_logging.py  test_main.py  test_models.py  test_org_file.py  test_registry.py  test_retrieval_golden.py  test_server.py  test_service.py  test_storage.py
