[project]
name = "org-mem"
version = "0.1.0"
description = "Org-backed MCP server for durable agent memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.28.1",
    "orgparse>=0.4.20251020",
]

[project.scripts]
org-mem = "main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
