[project]
name = "org-mem"
version = "0.1.0"
description = "Org-backed MCP server for durable agent memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.8.0",
    "mcp[cli]>=1.28.1",
    "orgparse>=0.4.20251020",
]

[project.scripts]
org-mem = "org_mem.server:run_stdio_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["org_mem"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
